--- a/src/renderer/src/assets/main.css
+++ b/src/renderer/src/assets/main.css
@@ -1,6 +1,6 @@
-@import url('tailwindcss');
+@import 'tailwindcss';
 
-@plugin './hero.mjs';
+@plugin './hero.js';
 
 @source '../../../../node_modules/@heroui/theme/dist/**/*.{js,ts,jsx,tsx}';
 
